--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,40 @@
 aiohttp==3.5.4
+astroid==2.3.2
 async-timeout==3.0.1
 attrs==19.3.0
+Automat==0.8.0
+cffi==1.13.1
 chardet==3.0.4
+constantly==15.1.0
+cryptography==2.8
+cssselect==1.1.0
 discord==1.0.1
 discord.py==1.2.4
+dotenv-python==0.0.1
+hyperlink==19.0.0
 idna==2.8
-idna-ssl==1.1.0
+incremental==17.5.0
+isort==4.3.21
+lazy-object-proxy==1.4.3
+lxml==4.4.1
+mccabe==0.6.1
 multidict==4.5.2
-typing-extensions==3.7.4
+parsel==1.5.2
+pyasn1==0.4.7
+pyasn1-modules==0.2.7
+pycparser==2.19
+PyDispatcher==2.0.5
+PyHamcrest==1.9.0
+pylint==2.4.3
+pyOpenSSL==19.0.0
+queuelib==1.5.0
+Scrapy==1.7.4
+service-identity==18.1.0
+six==1.12.0
+Twisted==19.7.0
+typed-ast==1.4.0
+w3lib==1.21.0
 websockets==6.0
+wrapt==1.11.2
 yarl==1.3.0
+zope.interface==4.6.0
