--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ cryptography==2.8
 cssselect==1.1.0
 discord==1.0.1
 discord.py==1.2.4
-dotenv-python==0.0.1
 hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
@@ -27,6 +26,7 @@ PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pylint==2.4.3
 pyOpenSSL==19.0.0
+python-dotenv==0.10.3
 queuelib==1.5.0
 Scrapy==1.7.4
 service-identity==18.1.0
