--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.5.4
 astroid==2.3.2
 async-timeout==3.0.1
+asyncio==3.4.3
 attrs==19.3.0
 Automat==0.8.0
 cffi==1.13.1
@@ -10,7 +11,7 @@ cryptography==2.8
 cssselect==1.1.0
 discord==1.0.1
 discord.py==1.2.4
-dotenv-python==0.0.1
+docutils==0.15.2
 hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
@@ -27,10 +28,12 @@ PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pylint==2.4.3
 pyOpenSSL==19.0.0
+python-dotenv==0.10.3
 queuelib==1.5.0
 Scrapy==1.7.4
 service-identity==18.1.0
 six==1.12.0
+Twisted==20.3.0
 typed-ast==1.4.0
 w3lib==1.21.0
 websockets==6.0
