--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,18 @@
-aiohttp==3.5.4
-astroid==2.3.2
+aiohttp==3.7.3
+appdirs==1.4.4
 async-timeout==3.0.1
-asyncio==3.4.3
-attrs==19.3.0
-Automat==0.8.0
-cffi==1.13.1
+attrs==20.3.0
+certifi==2020.12.5
 chardet==3.0.4
-constantly==15.1.0
-cryptography==2.8
-cssselect==1.1.0
 discord==1.0.1
-discord.py==1.2.4
-docutils==0.15.2
-hyperlink==19.0.0
-idna==2.8
-incremental==17.5.0
-isort==4.3.21
-lazy-object-proxy==1.4.3
-lxml==4.4.1
-mccabe==0.6.1
-multidict==4.5.2
-parsel==1.5.2
-pyasn1==0.4.7
-pyasn1-modules==0.2.7
-pycparser==2.19
-PyDispatcher==2.0.5
-PyHamcrest==1.9.0
-pylint==2.4.3
-pyOpenSSL==19.0.0
-python-dotenv==0.10.3
-queuelib==1.5.0
-Scrapy==1.7.4
-service-identity==18.1.0
-six==1.12.0
-Twisted==20.3.0
-typed-ast==1.4.0
-w3lib==1.21.0
-websockets==6.0
-wrapt==1.11.2
-yarl==1.3.0
-zope.interface==4.6.0
+discord.py==1.6.0
+distlib==0.3.1
+filelock==3.0.12
+idna==3.1
+multidict==5.1.0
+pipenv==2020.11.15
+python-dotenv==0.15.0
+typing-extensions==3.7.4.3
+virtualenv==20.4.2
+virtualenv-clone==0.5.4
+yarl==1.6.3
